--- a/Demo/ZerraDemo.Common/appsettings.json
+++ b/Demo/ZerraDemo.Common/appsettings.json
@@ -1,22 +1,24 @@
 {
-  "AuthenticationKey": "TestKeyForHttp",
+    "AuthenticationKey": "TestKeyForHttp",
 
-  "PetsSqlConnectionStringMSSQL": "Data Source=.;Initial Catalog=ZerraDemoPets;Integrated Security=true",
-  "PetsSqlConnectionStringPOSTGRESQL": "User ID=postgres;Password=password123;Host=localhost;Port=5432;Database=zerrademopets;",
-  "PetsSqlConnectionStringMYSQL": "Server=localhost;Port=3306;Uid=root;Pwd=password123;Database=ZerraDemoPets",
+    "MessageHost": "localhost:",
 
-  "Ledger1SqlConnectionStringMSSQL": "Data Source=.;Initial Catalog=ZerraDemoLedger;Integrated Security=true",
-  "Ledger1SqlConnectionStringPOSTGRESQL": "User ID=postgres;Password=password123;Host=localhost;Port=5432;Database=zerrademoledger;",
-  "Ledger1SqlConnectionStringMYSQL": "Server=localhost;Port=3306;Uid=root;Pwd=password123;Database=ZerraDemoLedger",
+    "PetsSqlConnectionStringMSSQL": "Data Source=.;Initial Catalog=ZerraDemoPets;Integrated Security=true",
+    "PetsSqlConnectionStringPOSTGRESQL": "User ID=postgres;Password=password123;Host=localhost;Port=5432;Database=zerrademopets;",
+    "PetsSqlConnectionStringMYSQL": "Server=localhost;Port=3306;Uid=root;Pwd=password123;Database=ZerraDemoPets",
 
-  "Ledger1EventStoreServer": "tcp://localhost:2113",
-  "Ledger2EventStoreServer": "tcp://localhost:2113",
+    "Ledger1SqlConnectionStringMSSQL": "Data Source=.;Initial Catalog=ZerraDemoLedger;Integrated Security=true",
+    "Ledger1SqlConnectionStringPOSTGRESQL": "User ID=postgres;Password=password123;Host=localhost;Port=5432;Database=zerrademoledger;",
+    "Ledger1SqlConnectionStringMYSQL": "Server=localhost;Port=3306;Uid=root;Pwd=password123;Database=ZerraDemoLedger",
 
-  "LogFileDirectory": "C:\\Temp",
+    "Ledger1EventStoreServer": "tcp://localhost:2113",
+    "Ledger2EventStoreServer": "tcp://localhost:2113",
 
-  "Disable-EventHubResourceGroup": "",
-  "Disable-EventHubTenantId": "",
-  "Disable-AzureEventHubApplicationId": "",
-  "Disable-AzureEventHubClientSecret": "",
-  "Disable-AzureEventHubSubscriptionId": ""
+    "LogFileDirectory": "C:\\Temp",
+
+    "Disable-EventHubResourceGroup": "",
+    "Disable-EventHubTenantId": "",
+    "Disable-AzureEventHubApplicationId": "",
+    "Disable-AzureEventHubClientSecret": "",
+    "Disable-AzureEventHubSubscriptionId": ""
 }
