--- a/Demo/ZerraDemo.Common/appsettings.json
+++ b/Demo/ZerraDemo.Common/appsettings.json
@@ -1,14 +1,14 @@
 {
     "AuthenticationKey": "TestKeyForHttp",
 
-    "MessageHost": "localhost:",
+    "MessageHost": "localhost",
 
     "PetsSqlConnectionStringMSSQL": "Data Source=.;Initial Catalog=ZerraDemoPets;Integrated Security=true",
-    "PetsSqlConnectionStringPOSTGRESQL": "User ID=postgres;Password=password123;Host=localhost;Port=5432;Database=zerrademopets;",
+    "PetsSqlConnectionStringPOSTGRESQL": "Host=localhost;Port=5432;User ID=postgres;Password=password123;Database=zerrademopets",
     "PetsSqlConnectionStringMYSQL": "Server=localhost;Port=3306;Uid=root;Pwd=password123;Database=ZerraDemoPets",
 
     "Ledger1SqlConnectionStringMSSQL": "Data Source=.;Initial Catalog=ZerraDemoLedger;Integrated Security=true",
-    "Ledger1SqlConnectionStringPOSTGRESQL": "User ID=postgres;Password=password123;Host=localhost;Port=5432;Database=zerrademoledger;",
+    "Ledger1SqlConnectionStringPOSTGRESQL": "Host=localhost;Port=5432;User ID=postgres;Password=password123;Database=zerrademoledger",
     "Ledger1SqlConnectionStringMYSQL": "Server=localhost;Port=3306;Uid=root;Pwd=password123;Database=ZerraDemoLedger",
 
     "Ledger1EventStoreServer": "tcp://localhost:2113",
