--- a/Demo/ZerraDemo.Common/cqrssettings.json
+++ b/Demo/ZerraDemo.Common/cqrssettings.json
@@ -57,7 +57,7 @@
         },
         {
             "Service": "ZerraDemo.Service.Pets",
-            "MessageHost": "localhost",
+            "MessageHost": "localhost:90011",
             "EncryptionKey": "SecretTransportKey6",
             "Types": [
                 "IPetsCommandHandler"
@@ -65,7 +65,7 @@
         },
         {
             "Service": "ZerraDemo.Service.Weather",
-            "MessageHost": "localhost",
+            "MessageHost": "localhost:90012",
             "EncryptionKey": "SecretTransportKey7",
             "Types": [
                 "IWeatherCommandHandler"
@@ -73,7 +73,7 @@
         },
         {
             "Service": "ZerraDemo.Service.Weather",
-            "MessageHost": "localhost",
+            "MessageHost": "localhost:90013",
             "EncryptionKey": "SecretTransportKeyEvents",
             "Types": [
                 "IWeatherEventHandler"
@@ -89,7 +89,7 @@
         },
         {
             "Service": "ZerraDemo.Service.WeatherCached",
-            "MessageHost": "localhost",
+            "MessageHost": "localhost:90014",
             "EncryptionKey": "SecretTransportKeyEvents",
             "Types": [
                 "IWeatherEventHandler"
@@ -97,7 +97,7 @@
         },
         {
             "Service": "ZerraDemo.Service.Ledger1",
-            "MessageHost": "localhost",
+            "MessageHost": "localhost:90015",
             "EncryptionKey": "SecretTransportKey9",
             "Types": [
                 "ILedger1CommandHandler"
@@ -105,7 +105,7 @@
         },
         {
             "Service": "ZerraDemo.Service.Ledger2",
-            "MessageHost": "localhost",
+            "MessageHost": "localhost:90016",
             "EncryptionKey": "SecretTransportKey10",
             "Types": [
                 "ILedger2CommandHandler"
