--- a/Misc/Zerra.Tools/Zerra.Tools.csproj
+++ b/Misc/Zerra.Tools/Zerra.Tools.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net7.0;net8.0;net9.0</TargetFrameworks>
+        <TargetFrameworks>net9.0</TargetFrameworks>
         <CheckEolTargetFramework>false</CheckEolTargetFramework>
         <Nullable>enable</Nullable>
         <Authors>Steven Zawaski</Authors>
