--- a/Framework/Zerra.Logger/Zerra.Logger.csproj
+++ b/Framework/Zerra.Logger/Zerra.Logger.csproj
@@ -11,11 +11,12 @@
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <Company>KaKush LLC</Company>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, Logging</PackageTags>
         <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
         <Description>Basic Console and File Logging for the Zerra Framework for a quick start.  Ideally replaced with a custom implementation of ILoggingProvider and IMessageLogger later on.</Description>
         <LangVersion>12.0</LangVersion>
-        <Version>5.0.0</Version>
+        <Version>5.0.1</Version>
     </PropertyGroup>
 
     <ItemGroup>
