--- a/Framework/Zerra.Repository.MsSql/Zerra.Repository.MsSql.csproj
+++ b/Framework/Zerra.Repository.MsSql/Zerra.Repository.MsSql.csproj
@@ -16,10 +16,11 @@ Zerra.Repository.MsSql.MsSqlDataContext
         </Description>
         <Company>KaKush LLC</Company>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, SQL</PackageTags>
         <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
         <LangVersion>12.0</LangVersion>
-        <Version>5.0.0</Version>
+        <Version>5.0.1</Version>
     </PropertyGroup>
 
     <ItemGroup>
