--- a/Framework/Zerra.SourceGeneration.Types/Zerra.SourceGeneration.Types.csproj
+++ b/Framework/Zerra.SourceGeneration.Types/Zerra.SourceGeneration.Types.csproj
@@ -11,13 +11,14 @@
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM</PackageTags>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <Description>
             Source generation for Zerra Framework performance
         </Description>
         <Company>KaKush LLC</Company>
         <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
         <LangVersion>12.0</LangVersion>
-        <Version>5.0.0</Version>
+        <Version>5.0.1</Version>
     </PropertyGroup>
 
     <ItemGroup>
