--- a/Framework/Zerra.Web/Zerra.Web.csproj
+++ b/Framework/Zerra.Web/Zerra.Web.csproj
@@ -19,8 +19,9 @@ Zerra.Web.CheckBoxList
         <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
         <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, ASPNET, Web</PackageTags>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <LangVersion>12.0</LangVersion>
-        <Version>5.0.0</Version>
+        <Version>5.0.1</Version>
     </PropertyGroup>
 
     <ItemGroup>
