--- a/Framework/Zerra.CQRS.Kafka/Zerra.CQRS.Kafka.csproj
+++ b/Framework/Zerra.CQRS.Kafka/Zerra.CQRS.Kafka.csproj
@@ -11,6 +11,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <None Include="..\..\LICENSE">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Confluent.Kafka" Version="2.3.0" />
     </ItemGroup>
 
