--- a/Framework/Zerra.SourceGeneration/Zerra.SourceGeneration.csproj
+++ b/Framework/Zerra.SourceGeneration/Zerra.SourceGeneration.csproj
@@ -11,6 +11,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <None Include="..\..\LICENSE">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.4.0" PrivateAssets="all" />
     </ItemGroup>
 
