--- a/Tests/Zerra.Test/Zerra.Test.csproj
+++ b/Tests/Zerra.Test/Zerra.Test.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
-        <Nullable>enable</Nullable>
+        <!--<Nullable>enable</Nullable>-->
         <ImplicitUsings>enable</ImplicitUsings>
         <InvariantGlobalization>true</InvariantGlobalization>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
