--- a/Framework/Zerra/Zerra.csproj
+++ b/Framework/Zerra/Zerra.csproj
@@ -24,4 +24,8 @@
     <ItemGroup>
         <ProjectReference Include="..\..\Framework\Zerra.SourceGeneration\Zerra.SourceGeneration.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" PackAsAnalyzer="true" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Map\Converters\Special\" />
+    </ItemGroup>
 </Project>
