--- a/Framework/Zerra.SourceGeneration/Zerra.SourceGeneration.csproj
+++ b/Framework/Zerra.SourceGeneration/Zerra.SourceGeneration.csproj
@@ -26,10 +26,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="..\..\LICENSE">
-            <Pack>True</Pack>
-            <PackagePath></PackagePath>
-        </None>
+        <None Include="..\..\LICENSE" Pack="true" PackagePath="\" />
     </ItemGroup>
 
     <ItemGroup>
